# simplex

./: App.cpp  App.hpp  CMakeLists.txt  Dockerfile  MainFrame.cpp  MainFrame.hpp  SimplexSolver.cpp  main.cpp
